# networks_labs

./: .gitignore  README.md
lab1/: CMakeLists.txt  README.md
lab1/cfg/: receiver.cfg  sender.cfg  test_file
lab1/report/: report.tex
lab1/src/: agent.cpp  one_way_transducer.h  primitive_transducers.h  receiving_transducer.h  sending_transducer.h
lab1/tools/: Benchmark_plots.ipynb  benchmark.py  loss_prob_GBN.csv  loss_prob_SR.csv  window_size_GBN.csv  window_size_SR.csv
lab2/: CMakeLists.txt  README.md
lab2/cfg/cross/: dr.cfg  r1.cfg  r2.cfg  r3.cfg  r4.cfg  r5.cfg
lab2/presets/: run_circle.sh  run_cross.sh  run_full.sh
lab2/presets/cfg/circle/: r1.cfg  r2.cfg  r3.cfg  r4.cfg  r5.cfg
lab2/presets/cfg/full/: dr.cfg  r1.cfg  r2.cfg  r3.cfg  r4.cfg  r5.cfg  r6.cfg
lab2/report/: report.tex
lab2/src/: common_router.cpp  common_router.h  designated_router.cpp  designated_router.h  one_way_transducer.h  router.cpp  router.h  topology.cpp  topology.h
lab2/tools/: dot2png.sh
lab3/: CMakeLists.txt  README.md
lab3/presets/: run.sh
lab3/presets/cfg/: clean_channels_bin.cfg  control_node.cfg  focus_node.cfg  r1.cfg  r2.cfg  r3.cfg  r4.cfg  sun_node.cfg
lab3/report/: report.tex
lab3/src/: common.h  control_node.cpp  control_node.h  focus_node.cpp  focus_node.h  messages.h  one_way_transducer.h  sun_node.cpp  sun_node.h  topology.cpp  topology.h  worker_node.cpp  worker_node.h
